# supersonic

./: Cargo.toml  README.md  build.rs
backups/benches/: atomic_array.rs
backups/mpmc/: mod.rs  sequence.rs
backups/sequence/: compat.rs  mod.rs  traits.rs
backups/sequence/tests/: append.rs  get.rs  insertion.rs  modify.rs  set.rs  slice.rs  split.rs
src/: lib.rs  prelude.rs
src/mpmc/: list.rs  mod.rs
src/safe/: atomic_array.rs  mod.rs
src/sequence/: mod.rs  prelude.rs  traits.rs
src/sequence/tests/: allocation.rs  drain.rs  extend.rs  extract.rs  mod.rs  remove.rs  reverse.rs
