[package]
name = "supersonic"
version = "0.1.0"
edition = "2024"
build = "build.rs"
publish = true
authors = ["d33pster <deep.main.ac@gmail.com>"]
description = "A one-stop rust crate for high-speed, high-performance, high-concurrency data-structures."
repository = "https://github.com/d33p0st/supersonic.git"
homepage = "https://github.com/d33p0st/supersonic"
documentation = "https://docs.rs/supersonic"
readme = "README.md"
categories = ["data-structures", "concurrency", "asynchronous", "memory-management"]
keywords = ["data-structures", "concurrency", "lock-free", "high-performance", "async"]
license = "MIT OR Apache-2.0"

[lib]
name = "supersonic"
path = "src/lib.rs"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
incremental = false
strip = true

[dependencies]
anyhow = "1.0.100"
arc-swap = "1.7.1"
bincode = { version = "2.0.1", features = ["serde"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }


[build-dependencies]
rustc_version = "0.4.1"

[features]
default = ["sequence"]
sequence = []

[dev-dependencies]
rand = "0.9.2"
